# tortoise-orm-stubs

./: README.md  pyproject.toml
scripts/: generate_stubs.py
tortoise-stubs/fields/: __init__.pyi
